Fix error message not wrapping

--- a/_sass/custom/modal.scss
+++ b/_sass/custom/modal.scss
@@ -69,6 +69,7 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
     max-width: 200px;
+    line-height: 1;
   }
 
   .modal-left {
